cmake_minimum_required(VERSION 3.10)
project(cpp_wangguilin)

set(CMAKE_CXX_STANDARD 11)


add_executable(demo01-type_enhance day01/demo01-type_enhance.cpp)
add_executable(demo02-bool day01/demo02-bool.cpp)
add_executable(demo03-enum day01/demo03-enum.cpp)
add_executable(demo04-expression-assign day01/demo04-expression_assign.cpp)
add_executable(demo05-nullptr day01/demo05-nullptr.cpp)
add_executable(demo06-cin_cout day01/demo06-cin_cout.cpp)
add_executable(demo07-cout_format day01/demo07-cout_format.cpp)
add_executable(demo08-func_overload day01/demo08-func_overload.cpp)
add_executable(main day01/demo09-externc/main.cpp)
add_executable(mystr day01/demo09-externc/mystr.cpp)

add_executable(demo10-operator_overload day01/demo10-operator_overload.cpp)
add_executable(demo11-default_args day01/demo11-default_args.cpp)
add_executable(demo12-overload_default_args_conflict day01/demo12-overload_default_args_conflict.cpp)
add_executable(demo13-ref day01/demo13-ref.cpp)
add_executable(demo14-ref_application day01/demo14-ref_application.cpp)
add_executable(demo15-pointer_ref day01/demo15-pointer_ref.cpp)
add_executable(demo16-ref_pointer day01/demo16-ref_pointer.cpp)
add_executable(demo17-pointer_pointer_and_ref_ref day01/demo17-pointer_pointer_and_ref_ref.cpp)
add_executable(demo18-pointer_ref_arr day01/demo18-pointer_ref_arr.cpp)
add_executable(demo19-array_ref day01/demo19-array_ref.cpp)
add_executable(demo01-review day03/demo01-review.cpp)
add_executable(demo02-const_ref day02/demo02-const_ref.cpp)
add_executable(demo03_temp_object_ref day02/demo03-temp_object_ref.cpp)
add_executable(demo04-ref_nature day02/demo04-ref_nature.cpp)
add_executable(demo05-ref_nature_2 day02/demo05-ref_nature_2.cpp)
add_executable(demo06-new_delete day02/demo06-se01-new.cpp)
add_executable(demo06-delete day02/demo06-se02-delete.cpp)
add_executable(demo07-ret_new day02/demo07-ret_new.cpp)
add_executable(demo08-inline day02/demo08-inline.cpp)
add_executable(demo09-static_cast day02/demo09-static_cast.cpp)
add_executable(demo10-reinterpret_cast day02/demo10-reinterpret_cast.cpp)
add_executable(demo11-const_cast day02/demo11-const_cast.cpp)

add_executable(demo12-c_namespace day02/demo12-c_namespace.c)
add_executable(demo13-cpp_namespace day02/demo13-cpp_namespace.cpp)
add_executable(demo14-cpp_namespace_demo day02/demo14-cpp_namespace_demo.cpp)
add_executable(demo15-namespace_std day02/demo15-namespace_std.cpp)
add_executable(demo16-namespace_nested day02/demo16-namespace_nested.cpp)
add_executable(demo17-cooperator day02/demo17-cooperator.cpp)

add_executable(demo18-string day02/demo18-string.cpp)
add_executable(demo19-string_to_and_to_string day02/demo19-string_to_and_to_string.cpp)
add_executable(demo20-read_string_from_file day02/demo20-read_string_from_file.cpp)

add_executable(demo02-struct_date day03/demo02-struct_date.cpp)
add_executable(demo03-struct_stack day03/demo03-struct_stack.cpp)
add_executable(demo04-class_namespace day03/demo04-class_namespace.cpp)
add_executable(demo05-linked_list day03/demo05-linked_list.cpp)

add_executable(demo06-class_init day03/demo06-class_init.cpp)
add_executable(demo07-class_init_2 day03/demo07-class_init_2.cpp)
add_executable(demo07-class_init_3 day03/demo07-class_init_3.cpp)
add_executable(demo07-class_init_4 day03/demo07-class_init_4.cpp)
add_executable(demo08-destructor day03/demo08-destructor.cpp)
add_executable(demo09-destructor_2 day03/demo09-destructor_2.cpp)
add_executable(demo10-level_memory day03/demo10-level_memory.cpp)
add_executable(demo11-level_memory_2 day03/demo11-level_memory_2.cpp)